fix: prompt spacing

--- a/sphinx_terminal/_static/terminal.css
+++ b/sphinx_terminal/_static/terminal.css
@@ -36,7 +36,7 @@
 }
 
 .terminal .input .literal {
-  white-space-collapse: preserve-breaks;
+  white-space-collapse: break-spaces;
   background: transparent;
   padding-left: 0;
 }
